Change z-index of navbar for fixing overlapping.

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -11,6 +11,7 @@
     padding-left: 3%;
     padding-right: 3%;
     position: fixed;
+    z-index: 10;
 }
 
 .navbar-container .title{
